Auto-fit on mid section and better responsive layout

--- a/index.html
+++ b/index.html
@@ -95,89 +95,89 @@
 
     <!-- MIDDLE -->
     <div class="middle">
-      <div class="card">
-        <p class="title"> Super Cool Project</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt eligendi ratione debitis optio a dicta ipsam
-          provident officiis earum molestias. Molestias cum vel, deleniti molestiae quisquam saepe eius architecto quae.
-        </p>
-        <p class="links">
-          <a href="#"><i class="fa-solid fa-star"></i></a>
-          <a href="#"><i class="fa-solid fa-comment"></i></a>
-          <a href="#"><i class="fa-solid fa-thumbtack"></i></a>
-        </p>
-
+      <div class="top-middle">
+        <p class="section-title">Your projects</p>
       </div>
-
-      <div class="card">
-        <p class="title"> Less Cool Project</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt eligendi ratione debitis optio a dicta ipsam
-          provident officiis earum molestias. Molestias cum vel, deleniti molestiae quisquam saepe eius architecto quae.
-        </p>
-
-        <p class="links">
-          <a href="#"><i class="fa-solid fa-star"></i></a>
-          <a href="#"><i class="fa-solid fa-comment"></i></a>
-          <a href="#"><i class="fa-solid fa-thumbtack"></i></a>
-        </p>
-      </div>
-
-
-      <div class="card">
-        <p class="title"> Impossible App</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt eligendi ratione debitis optio a dicta ipsam
-          provident officiis earum molestias. Molestias cum vel, deleniti molestiae quisquam saepe eius architecto quae.
-        </p>
-
-        <p class="links">
-          <a href="#"><i class="fa-solid fa-star"></i></a>
-          <a href="#"><i class="fa-solid fa-comment"></i></a>
-          <a href="#"><i class="fa-solid fa-thumbtack"></i></a>
-        </p>
-      </div>
-
-      <div class="card">
-        <p class="title"> Easy Peasy App</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt eligendi ratione debitis optio a dicta ipsam
-          provident officiis earum molestias. Molestias cum vel, deleniti molestiae quisquam saepe eius architecto quae.
-        </p>
-
-        <p class="links">
-          <a href="#"><i class="fa-solid fa-star"></i></a>
-          <a href="#"><i class="fa-solid fa-comment"></i></a>
-          <a href="#"><i class="fa-solid fa-thumbtack"></i></a>
-        </p>
-      </div>
-
-      <div class="card">
-        <p class="title"> Ad Blocker</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt eligendi ratione debitis optio a dicta ipsam
-          provident officiis earum molestias. Molestias cum vel, deleniti molestiae quisquam saepe eius architecto quae.
-        </p>
-
-        <p class="links">
-          <a href="#"><i class="fa-solid fa-star"></i></a>
-          <a href="#"><i class="fa-solid fa-comment"></i></a>
-          <a href="#"><i class="fa-solid fa-thumbtack"></i></a>
-        </p>
-      </div>
-
-      <div class="card">
-        <p class="title"> Money Maker</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt eligendi ratione debitis optio a dicta ipsam
-          provident officiis earum molestias. Molestias cum vel, deleniti molestiae quisquam saepe eius architecto quae.
-        </p>
-
-        <p class="links">
-          <a href="#"><i class="fa-solid fa-star"></i></a>
-          <a href="#"><i class="fa-solid fa-comment"></i></a>
-          <a href="#"><i class="fa-solid fa-thumbtack"></i></a>
-        </p>
+      <div class="bottom-middle">
+        <div class="card">
+          <p class="title"> Super Cool Project</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt eligendi ratione debitis optio a dicta ipsam
+            provident officiis earum molestias. Molestias cum vel, deleniti molestiae quisquam saepe eius architecto
+            quae.
+          </p>
+          <p class="links">
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-comment"></i>
+            <i class="fa-solid fa-thumbtack"></i>
+          </p>
+        </div>
+        <div class="card">
+          <p class="title"> Less Cool Project</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt eligendi ratione debitis optio a dicta ipsam
+            provident officiis earum molestias. Molestias cum vel, deleniti molestiae quisquam saepe eius architecto
+            quae.
+          </p>
+          <p class="links">
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-comment"></i>
+            <i class="fa-solid fa-thumbtack"></i>
+          </p>
+        </div>
+        <div class="card">
+          <p class="title"> Impossible App</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt eligendi ratione debitis optio a dicta ipsam
+            provident officiis earum molestias. Molestias cum vel, deleniti molestiae quisquam saepe eius architecto
+            quae.
+          </p>
+          <p class="links">
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-comment"></i>
+            <i class="fa-solid fa-thumbtack"></i>
+          </p>
+        </div>
+        <div class="card">
+          <p class="title"> Easy Peasy App</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt eligendi ratione debitis optio a dicta ipsam
+            provident officiis earum molestias. Molestias cum vel, deleniti molestiae quisquam saepe eius architecto
+            quae.
+          </p>
+          <p class="links">
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-comment"></i>
+            <i class="fa-solid fa-thumbtack"></i>
+          </p>
+        </div>
+        <div class="card">
+          <p class="title"> Ad Blocker</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt eligendi ratione debitis optio a dicta ipsam
+            provident officiis earum molestias. Molestias cum vel, deleniti molestiae quisquam saepe eius architecto
+            quae.
+          </p>
+          <p class="links">
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-comment"></i>
+            <i class="fa-solid fa-thumbtack"></i>
+          </p>
+        </div>
+        <div class="card">
+          <p class="title"> Money Maker</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt eligendi ratione debitis optio a dicta ipsam
+            provident officiis earum molestias. Molestias cum vel, deleniti molestiae quisquam saepe eius architecto
+            quae.
+          </p>
+          <p class="links">
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-comment"></i>
+            <i class="fa-solid fa-thumbtack"></i>
+          </p>
+        </div>
       </div>
 
     </div>
 
     <!-- EXTRAS -->
     <div class="extras">
+      <p class="section-title">Announcements</p>
       <!-- Extras top -->
       <div class="extras-top">
         <!-- <p class="section-title"> Yes</p> -->
@@ -210,32 +210,33 @@
 
       <!-- Extras-Bottom -->
       <div class="extras-bottom">
+        <p class="section-title">Trending</p>
         <div class="extras-bottom-container">
           <div class="trending">
             <img src="./images/korra dp.jpg" alt="korra">
             <pre>
-              <span class="trending-title">@Korra</span>
+              <a href="#"><span class="trending-title">@Korra</span></a>
               The Avatar
             </pre>
           </div>
           <div class="trending">
             <img src="./images/future industries dp.jpg" alt="future industries">
             <pre>
-              <span class="trending-title">@Future Industries</span>
+              <a href="#"><span class="trending-title">@Future Industries</span></a>
               Driven by innovation
             </pre>
           </div>
           <div class="trending">
             <img src="./images/prince wu. dpwebp.webp" alt="Prince">
             <pre>
-              <span class="trending-title">@Prince Wu</span>
+              <a href="#"><span class="trending-title">@Prince Wu</span></a>
               Elegance and Leadership
             </pre>
           </div>
           <div class="trending">
             <img src="./images/raava dp.webp" alt="Raava">
             <pre>
-              <span class="trending-title">@Harmonic Convergence</span>
+              <a href="#"><span class="trending-title">@Harmonic Convergence</span></a>
               Track of changes since the event
             </pre>
           </div>
